fixed horizontal scrollbar

--- a/styling/style.css
+++ b/styling/style.css
@@ -37,8 +37,8 @@ hr {
 .loader {
     display: none;
     position: absolute;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     padding-top: 2em;
     background-color: white;
     z-index: 99999;
